[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sae"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "accelerate>=1.6.0",
    "diffusers==0.32.2",
    "transformers>=4.48.3",
    "triton>=2.1.0",
    "einops>=0.8.1",
    "natsort>=8.4.0",
    "simple-parsing>=0.1.7",
]

[dependency-groups]
dev = [
    "dill>=0.3.9",
    "ipykernel>=6.29.5",
    "pympler>=1.1",
]

[tool.uv.sources]
torch = { index = "pytorch_index" }
torchvision = { index = "pytorch_index" }

[[tool.uv.index]]
name = "pytorch_index"
url = "https://download.pytorch.org/whl/nightly/cu128"


[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 


